--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -24,7 +24,7 @@
 					<h1>2019</h1>
 					<b>Rome, IT</b>
 					<p>
-					Conference Organized by INFN
+					Conference Organized by <br> INFN
 					</p>
 				</div>
 				<footer class="card-footer">
@@ -47,7 +47,7 @@
 					<h1>2018</h1>
 					<b>Krakow, PL</b>
 					<p>
-					Conference Organized by Cyfronet
+					Conference Organized by <br> Cyfronet
 					</p>
 				</div>
 				<footer class="card-footer">
@@ -70,7 +70,7 @@
 					<h1>2017</h1>
 					<b>Amsterdam, NL</b>
 					<p>
-					Conference Organized by SURFSara
+					Conference Organized by <br> SURFSara
 					</p>
 				</div>
 				<footer class="card-footer">
@@ -93,7 +93,7 @@
 					<h1>2016</h1>
 					<b>Zurich, CH</b>
 					<p>
-					Conference Organized by ETH Zurich
+					Conference Organized by <br> ETH Zurich
 					</p>
 				</div>
 				<footer class="card-footer">
@@ -116,7 +116,7 @@
 					<h1>2014</h1>
 					<b>Geneva, CH</b>
 					<p>
-					Conference Organized by CERN
+					Conference Organized by <br> CERN
 					</p>
 				</div>
 				<footer class="card-footer">
