--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -1,31 +1,33 @@
 {{ define "main" }}
 <div class="hero-body">
-	<div class="container">
-		<h1 class="title">
-			Cloud Storage Service for File Synchronization and Sharing (CS3) Community
-		</h1>
+	<div class="container content">
+		<h4>Cloud Storage Service for File Synchronization and Sharing (CS3) Community</h4>
 		<p>This community is about innovative storage systems and their integration with user environments to enable progress in data sciences at all levels: local laboratories, regional collaborations and global science. CS3 applications range from innovative big-data analysis to science outreach and education.
 		</p>
 		<hr>
 	</div>
 </div>
 
-<div class="columns">
-
-	<div class="column is-one-fifth">
-		<div class="card">
-			<div class="card-image">
-				<figure class="image is-5by4">
-					<img src="https://cs3.infn.it/immagini/sfondo_ccr_2019.png" alt="Placeholder image">
-				</figure>
-			</div>
-			<div class="card-content">
-				<div class="content">
-					<h1>2019</h1>
-					<b>Rome, IT</b>
-					<p>
-					Conference Organized by <br/> INFN
-					</p>
+<div class="section">
+	<div class="content has-text-centered">
+		<i>Conferences organized</i>
+	</div>
+	<div class="columns">
+		<div class="column is-one-fifth">
+			<div class="card">
+				<div class="card-image">
+					<figure class="image is-5by4">
+						<img src="/images/conf-rome-2019.png" alt="Placeholder image">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="content">
+						<h1>2019</h1>
+						<b>Rome, IT</b>
+						<p>
+						Conference Organized by <br/> INFN
+						</p>
+					</div>
 				</div>
 				<footer class="card-footer">
 					<a href="https://cs3.infn.it/home.html" class="card-footer-item">Website</a>
@@ -33,22 +35,24 @@
 				</footer>
 			</div>
 		</div>
-	</div>
 
-	<div class="column is-one-fifth">
-		<div class="card">
-			<div class="card-image">
-				<figure class="image is-5by4">
-					<img src="http://cs3.cyfronet.pl/img/sections-background/hero.jpg" alt="Placeholder image">
-				</figure>
-			</div>
-			<div class="card-content">
-				<div class="content">
-					<h1>2018</h1>
-					<b>Krakow, PL</b>
-					<p>
-					Conference Organized by <br/> Cyfronet
-					</p>
+		<div class="column is-one-fifth">
+			<div class="card">
+				<div class="card-image">
+					<figure class="image is-5by4">
+						<img src="/images/conf-krakow-2018.png" alt="Placeholder image">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="content">
+						<h1>2018</h1>
+						<b>Krakow, PL</b>
+						<p>
+						Conference Organized by <br/> Cyfronet
+						</p>
+						<hr/>
+						<a href="https://doi.org/10.5281/zenodo.1157141"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.1157141.svg" alt="DOI"></a>
+					</div>
 				</div>
 				<footer class="card-footer">
 					<a href="http://cs3.cyfronet.pl/" class="card-footer-item">Website</a>
@@ -56,22 +60,24 @@
 				</footer>
 			</div>
 		</div>
-	</div>
 
-	<div class="column is-one-fifth">
-		<div class="card">
-			<div class="card-image">
-				<figure class="image is-5by4">
-					<img src="https://cs3.surfsara.nl/site/wp-content/uploads/2016/09/amsterdam-988047_1280.jpg" alt="Placeholder image">
-				</figure>
-			</div>
-			<div class="card-content">
-				<div class="content">
-					<h1>2017</h1>
-					<b>Amsterdam, NL</b>
-					<p>
-					Conference Organized by <br/> SURFSara
-					</p>
+		<div class="column is-one-fifth">
+			<div class="card">
+				<div class="card-image">
+					<figure class="image is-5by4">
+						<img src="/images/conf-amsterdam-2017.jpg" alt="Placeholder image">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="content">
+						<h1>2017</h1>
+						<b>Amsterdam, NL</b>
+						<p>
+						Conference Organized by <br/> SURFSara
+						</p>
+						<hr/>
+						<a href="https://doi.org/10.5281/zenodo.254064"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.254064.svg" alt="DOI"></a>
+					</div>
 				</div>
 				<footer class="card-footer">
 					<a href="https://cs3.surfsara.nl/" class="card-footer-item">Website</a>
@@ -79,22 +85,24 @@
 				</footer>
 			</div>
 		</div>
-	</div>
 
-	<div class="column is-one-fifth">
-		<div class="card">
-			<div class="card-image">
-				<figure class="image is-5by4">
-					<img src="https://cs3.ethz.ch/photo/ZurichMainBldg.png" alt="Placeholder image">
-				</figure>
-			</div>
-			<div class="card-content">
-				<div class="content">
-					<h1>2016</h1>
-					<b>Zurich, CH</b>
-					<p>
-					Conference Organized by <br/> ETH Zurich
-					</p>
+		<div class="column is-one-fifth">
+			<div class="card">
+				<div class="card-image">
+					<figure class="image is-5by4">
+						<img src="/images/conf-zurich-2016.png" alt="Placeholder image">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="content">
+						<h1>2016</h1>
+						<b>Zurich, CH</b>
+						<p>
+						Conference Organized by <br/> ETH Zurich
+						</p>
+						<hr/>
+						<a href="https://doi.org/10.5281/zenodo.44783"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.44783.svg" alt="DOI"></a>
+					</div>
 				</div>
 				<footer class="card-footer">
 					<a href="https://cs3.ethz.ch/" class="card-footer-item">Website</a>
@@ -102,22 +110,22 @@
 				</footer>
 			</div>
 		</div>
-	</div>
 
-	<div class="column is-one-fifth">
-		<div class="card">
-			<div class="card-image">
-				<figure class="image is-5by4">
-					<img src="https://visit.cern/sites/visits.web.cern.ch/files/images/image/2home.jpg" alt="Placeholder image">
-				</figure>
-			</div>
-			<div class="card-content">
-				<div class="content">
-					<h1>2014</h1>
-					<b>Geneva, CH</b>
-					<p>
-					Conference Organized by <br/> CERN
-					</p>
+		<div class="column is-one-fifth">
+			<div class="card">
+				<div class="card-image">
+					<figure class="image is-5by4">
+						<img src="/images/conf-cern-2014.jpg" alt="Placeholder image">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="content">
+						<h1>2014</h1>
+						<b>Geneva, CH</b>
+						<p>
+						Conference Organized by <br/> CERN
+						</p>
+					</div>
 				</div>
 				<footer class="card-footer">
 					<a href="https://indico.cern.ch/event/336753/" class="card-footer-item">Website</a>
@@ -125,11 +133,36 @@
 				</footer>
 			</div>
 		</div>
-	</div>
 
+	</div>
 </div>
 
 
+<div class="section">
+	<div class="hero-body">
+		<div class="container">
+			<div class="columns">
+				<div class="column">
+					<div class="card" id="worldmap">
+						<div class="card-content">
+							<div class="content has-text-centered">
+      <img src="/images/cs3-logo.png" width="240" height="28">
+      <h2>47 institutions <i class="icon fas fa-university has-text-info"></i> , 21 countries <i class="icon fas fa-flag has-text-info"></i> , 120 participants <i class="icon fas fa-users has-text-info"></i></h2>
+							</div>
+						</div>
+						<div class="card-image has-text-centered">
+							<p><i>Participation from 2018</i><p>
+							<figure class="image">
+								<img src="/images/world-map-2018.png"/>
+							</figure>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</div>
 
 
 
