--- a/themes/cs3/layouts/partials/footer.html
+++ b/themes/cs3/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer" style="margin-top: 1%;">
 	<div class="content has-text-centered">
 		<p>Made with <span class="icon has-text-danger"><i class="fas fa-heart"></i> </span> with <a href="https://gohugo.io/">Hugo</a></p>
-		<p><a href="/sitemap.xml">Sitemap</a> | <a href="/index.xml">RSS</a></p>
+		<p><a href="/sitemap.xml">Sitemap</a> | <a href="/index.xml">RSS</a> | <a href="/contact">Contact</a></p>
 	</div>
 </footer>
