--- a/themes/cs3/layouts/contact/list.html
+++ b/themes/cs3/layouts/contact/list.html
@@ -4,15 +4,22 @@
 		<div class="card" id="worldmap">
 			<div class="card-content has-text-centered">
 				<div class="content">
-					<p><i class="fas fa-envelope icon has-text-info"></i>
-					contact@cs3community.org</p>
+					<a href="https://gitter.im/cs3org/community"><p><i class="fab fa-gitter icon has-text-info"></i>
+						Chat with us </p></a>
 				</div>
 			</div>
 			<footer class="card-footer">
 				<div class="card-footer-item">
-					<a class="button is-info" href="mailto:contact@cs3community.org?subject=CS3 Community Interest">Send mail</a>
 				</div>
 			</footer>
+		</div>
+		<div class="card" id="worldmap">
+			<div class="card-content has-text-centered">
+				<div class="content">
+					<a href="mailto:contact@cs3community.org?subject=CS3 Community Interest"><p><i class="fas fa-envelope icon has-text-info"></i>
+						contact@cs3community.org</p></a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
