--- a/themes/cs3/layouts/partials/header.html
+++ b/themes/cs3/layouts/partials/header.html
@@ -23,6 +23,9 @@
 				</div>
 				{{ end }}
 				<div class="navbar-item">
+					<a href="https://gitter.im/cs3org/community"><i class="icon fab fa-gitter"></i></a>
+				</div>
+				<div class="navbar-item">
 					<a href="https://twitter.com/hashtag/cs3rome"><i class="icon fab fa-twitter"></i></a>
 				</div>
 				<div class="navbar-item">
