--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-<!--
 <div class="container content notification is-danger has-text-centered">
-	<p><a href="https://cs3.infn.it/register.html">Upcoming CS3 Conference: Rome, 28-30 January 2019</a></p>
+	<!--<p><a href="http://cs3.deic.dk">Upcoming CS3 Conference: Copenhagen, 27-29 January 2020</a></p>-->
+	<p><a href="">Upcoming CS3 Conference: Copenhagen, 27-29 January 2020</a></p>
 </div>
--->
+
 <div class="hero-body">
 	<div class="container content">
 		<h4>Cloud Storage Services for Synchronization and Sharing (CS3)</h4>
@@ -14,8 +14,39 @@
 	</div>
 </div>
 
+<div class="columns is-centered">
+	<div class="column is-two-fifths">
 <div class="content has-text-centered">
-	<i>Conferences organized</i>
+<div class="card">
+	<div class="card-image">
+		<figure class="image" style="margin-left: 0px; margin-right: 0px">
+			<img src="/images/conf-copenhagen-2020.png" alt="Placeholder image">
+		</figure>
+	</div>
+	<div class="card-content">
+		<div class="content">
+			<h1>2020<br>27-29 January</h1>
+			<b>Copenhagen, DK</b>
+			<p>
+			Conference Organized by <br/> DEIC
+			</p>
+			<hr/>
+			<!--<a href="https://doi.org/10.5281/zenodo.2545482"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2545482.svg" alt="DOI"></a>-->
+			<b>More details soon</b>
+		</div>
+	</div>
+	<footer class="card-footer">
+		<!--<a href="https://cs3.infn.it/home.html" class="card-footer-item">Website</a>
+		<a href="https://indico.cern.ch/event/726040/timetable/#20190128" class="card-footer-item">Programme</a>-->
+	</footer>
+</div>
+</div>
+	</div>
+</div>
+
+
+<div class="content has-text-centered">
+	<i>Previous conferences organized</i>
 </div>
 <div class="columns">
 	<div class="column is-one-fifth">
@@ -146,42 +177,42 @@
 </div>
 
 
-	<div class="hero-body">
-		<div class="card" id="worldmap">
-			<div class="card-content">
-				<div class="content has-text-centered">
-					<img src="/images/cs3-logo.png" width="240" height="28">
-					<div class="columns content">
-						<div class="column one-third">
-							<h4>47 institutions <i class="icon fas fa-university has-text-link"></i></h4>
-						</div>
-						<div class="column one-third">
-							<h4>21 countries <i class="icon fas fa-flag has-text-link"></i></h4>
-						</div>
-						<div class="column one-third">
-							<h4>120 participants <i class="icon fas fa-users has-text-link"></i></h4>
-						</div>
+<div class="hero-body">
+	<div class="card" id="worldmap">
+		<div class="card-content">
+			<div class="content has-text-centered">
+				<img src="/images/cs3-logo.png" width="240" height="28">
+				<div class="columns content">
+					<div class="column one-third">
+						<h4>47 institutions <i class="icon fas fa-university has-text-link"></i></h4>
+					</div>
+					<div class="column one-third">
+						<h4>21 countries <i class="icon fas fa-flag has-text-link"></i></h4>
+					</div>
+					<div class="column one-third">
+						<h4>120 participants <i class="icon fas fa-users has-text-link"></i></h4>
 					</div>
 				</div>
 			</div>
-			<div class="card-image has-text-centered">
-				<p><i>Participation from 2018</i><p>
-				<figure class="image">
-					<img src="/images/world-map-2018.png"/>
-				</figure>
-			</div>
+		</div>
+		<div class="card-image has-text-centered">
+			<p><i>Participation from 2018</i><p>
+			<figure class="image">
+				<img src="/images/world-map-2018.png"/>
+			</figure>
 		</div>
 	</div>
-	</div>
+</div>
+</div>
 
 
 
 
-	<!--
-	 <p><strong>Latest posts</strong></p>
-	 {{ range first 10 .Data.Pages }}
-	 <a href="{{ .Permalink }}">{{ .Title }}</a></br>
-	 {{ end }}
-	-->
-
+<!--
+	<p><strong>Latest posts</strong></p>
+	{{ range first 10 .Data.Pages }}
+	<a href="{{ .Permalink }}">{{ .Title }}</a></br>
 	{{ end }}
+-->
+
+{{ end }}
