downsize main conference to one-fifth, remove red banner

--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
+<!--
 <div class="container content notification is-danger has-text-centered">
-	<!--<p><a href="http://cs3.deic.dk">Upcoming CS3 Conference: Copenhagen, 27-29 January 2020</a></p>-->
 	<p><a href="">Upcoming CS3 Conference: Copenhagen, 27-29 January 2020</a></p>
 </div>
+-->
 
 <div class="hero-body">
 	<div class="container content">
@@ -15,11 +16,11 @@
 </div>
 
 <div class="columns is-centered">
-	<div class="column is-two-fifths">
+	<div class="column is-one-third">
 <div class="content has-text-centered">
 <div class="card">
 	<div class="card-image">
-		<figure class="image" style="margin-left: 0px; margin-right: 0px">
+		<figure class="image is-5by4" style="margin-left: 0px; margin-right: 0px">
 			<img src="/images/conf-copenhagen-2020.png" alt="Placeholder image">
 		</figure>
 	</div>
