--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -32,14 +32,14 @@
 			<p>
 			Conference Organized by <br/> DEIC
 			</p>
-			<hr/>
-			<!--<a href="https://doi.org/10.5281/zenodo.2545482"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2545482.svg" alt="DOI"></a>-->
-			<b>More details soon</b>
+			<!--<hr/>
+			<a href="https://doi.org/10.5281/zenodo.2545482"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2545482.svg" alt="DOI"></a>
+			<b>More details soon</b>-->
 		</div>
 	</div>
 	<footer class="card-footer">
-		<!--<a href="https://cs3.infn.it/home.html" class="card-footer-item">Website</a>
-		<a href="https://indico.cern.ch/event/726040/timetable/#20190128" class="card-footer-item">Programme</a>-->
+		<a href="https://cs3.deic.dk/" class="card-footer-item">Website</a>
+		<a href="https://cs3.deic.dk/" class="card-footer-item">Programme</a>
 	</footer>
 </div>
 </div>
