--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -20,12 +20,12 @@
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
-					<img src="/images/conf-virtual-2021.png" alt="Placeholder image">
+					<img src="https://www.cs3community.org/2022/featured-background_hufce6da1ce803a942b557481d8bda33e8_2126229_960x540_fill_q75_catmullrom_bottom.jpg" alt="Placeholder image">
 				</figure>
 			</div>
 			<div class="card-content">
 				<div class="content">
-					<h1>25-29 January 2021</h1>
+					<h1>24-28 January 2022</h1>
 					<b>Virtual, Everywhere</b>
 					<!--
 					<p>
@@ -39,8 +39,8 @@
 				</div>
 			</div>
 			<footer class="card-footer">
-				<a href="https://www.cs3community.org/2021/" class="card-footer-item">Website</a>
-				<a href="https://indico.cern.ch/e/cs3-2021" class="card-footer-item">Programme</a>
+				<a href="https://www.cs3community.org/2022/" class="card-footer-item">Website</a>
+				<a href="https://indico.cern.ch/e/cs3-2022" class="card-footer-item">Programme</a>
 			</footer>
 		</div>
 	</div>
@@ -49,6 +49,36 @@
 
 <div class="content has-text-centered">
 	<i>Previous conferences organized</i>
+</div>
+
+<div class="columns is-centered">
+	<div class="column is-one-fifth">
+		<div class="card">
+			<div class="card-image">
+				<figure class="image is-5by4">
+					<img src="/images/conf-virtual-2021.png" alt="Placeholder image">
+				</figure>
+			</div>
+			<div class="card-content">
+				<div class="content">
+					<h1>2021</h1>
+					<b>Virtual</b>
+					<p>
+					Conference Organized by <br/> CERN
+					</p>
+					<hr/>
+					<!--
+					<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>
+					-->
+				</div>
+			</div>
+			<footer class="card-footer">
+				<a href="https://www.cs3community.org/2021/" class="card-footer-item">Website</a>
+				<a href="https://indico.cern.ch/event/970232/program" class="card-footer-item">Programme</a>
+			</footer>
+		</div>
+	</div>
+
 </div>
 
 <div class="columns is-centered">
