--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="container content notification is-danger has-text-centered">
-	<p><a href="https://www.cs3community.org/2022/">Upcoming CS3 Conference: Virtual, 24-28 January 2022</a></p>
+	<p><a href="https://indico.cern.ch/event/1210538/">Upcoming CS3 Conference: 6-8 March 2023, Barcelona, Spain</a></p>
 </div>
 
 <div class="hero-body">
@@ -13,30 +13,28 @@
 	</div>
 </div>
 
-<!--
 <div class="columns is-centered">
 	<div class="column is-one-third">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
-					<img src="https://www.cs3community.org/2022/featured-background_hufce6da1ce803a942b557481d8bda33e8_2126229_960x540_fill_q75_catmullrom_bottom.jpg" alt="Placeholder image">
+					<img src="/images/conf-barcelona-2023.png" alt="Placeholder image">
 				</figure>
 			</div>
 			<div class="card-content">
 				<div class="content">
-					<h1>24-28 January 2022</h1>
-					<b>Virtual, Everywhere</b>
-					<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>
+					<h1>6-8 March 2023</h1>
+					<b>Barcelona, SP</b>
+					<!--<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>-->
 				</div>
 			</div>
 			<footer class="card-footer">
-				<a href="https://www.cs3community.org/2022/" class="card-footer-item">Website</a>
-				<a href="https://indico.cern.ch/e/cs3/2022" class="card-footer-item">Programme</a>
+				<a href="https://indico.cern.ch/event/1210538/" class="card-footer-item">Website</a>
+				<a href="https://indico.cern.ch/event/1210538/program" class="card-footer-item">Programme</a>
 			</footer>
 		</div>
 	</div>
 </div>
--->
 
 
 <!--
