--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -24,8 +24,11 @@
 			<div class="card-content">
 				<div class="content">
 					<h1>6-8 March 2023</h1>
-					<b>Barcelona, SP</b>
+					<b>Barcelona, ES</b>
 					<!--<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>-->
+					<p>
+					Conference Organized by <br/> ESADE
+					</p>
 				</div>
 			</div>
 			<footer class="card-footer">
@@ -44,7 +47,7 @@
 -->
 
 <div class="columns is-centered">
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -70,7 +73,7 @@
 			</footer>
 		</div>
 	</div>
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -96,11 +99,7 @@
 			</footer>
 		</div>
 	</div>
-
-</div>
-
-<div class="columns is-centered">
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -125,7 +124,7 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -150,7 +149,11 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fifth">
+</div>
+
+<div class="columns is-centered">
+
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -174,10 +177,7 @@
 			</footer>
 		</div>
 	</div>
-</div>
-
-<div class="columns is-centered">
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -202,7 +202,7 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -227,7 +227,7 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fifth">
+	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -253,7 +253,6 @@
 	</div>
 
 </div>
-
 
 <div class="hero-body">
 	<div class="card" id="worldmap">
