--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -1,4 +1,10 @@
 {{ define "main" }}
+<div class="container content notification is-danger has-text-centered">
+	<p>The 2024 CS3 Conference will take place on 11-13 March 2023 at CERN.
+	This is a way for all of us to mark the 10th anniversary of this event
+	and of our community (the very first conference in this series took
+	place in 2014 at CERN</p>
+</div>
 <div class="hero-body">
 	<div class="container content">
 		<h4>Cloud Storage Services for Synchronization and Sharing (CS3)</h4>
@@ -10,26 +16,26 @@
 </div>
 
 <div class="columns is-centered">
-	<div class="column is-one-third">
+	<div class="column is-half">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
-					<img src="/images/conf-barcelona-2023.png" alt="Placeholder image">
+					<img src="/images/sciencegateway.jpeg" alt="Placeholder image">
 				</figure>
 			</div>
 			<div class="card-content">
 				<div class="content">
-					<h1>6-8 March 2023</h1>
-					<b>Barcelona, ES</b>
+					<h1>11-13 March 2024</h1>
+					<b>Geneva, CH</b>
 					<!--<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>-->
 					<p>
-					Conference Organized by <br/> ESADE
+					Conference Organized by <br/> CERN
 					</p>
 				</div>
 			</div>
 			<footer class="card-footer">
-				<a href="https://www.esade.edu/faculty-research/en/institute-innovation-knowledge-management/outreach/cloud-services-for-synchronisation-and-sharing" class="card-footer-item">Website/Registration</a>
-				<a href="https://indico.cern.ch/event/1210538/program" class="card-footer-item">Programme</a>
+				<a href="https://sciencegateway.cern/" class="card-footer-item">Registration coming soon</a>
+				<a href="https://sciencegateway.cern/" class="card-footer-item">Website coming soon</a>
 			</footer>
 		</div>
 	</div>
@@ -43,6 +49,32 @@
 -->
 
 <div class="columns is-centered">
+	<div class="column is-one-fourth">
+		<div class="card">
+			<div class="card-image">
+				<figure class="image is-5by4">
+					<img src="/images/conf-barcelona-2023.png" alt="Placeholder image">
+				</figure>
+			</div>
+			<div class="card-content">
+				<div class="content">
+					<h1>2023</h1>
+					<b>Barcelona</b>
+					<p>
+					Conference Organized by <br/> ESADE
+					</p>
+					<hr/>
+					<!--
+					<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>
+					-->
+				</div>
+			</div>
+			<footer class="card-footer">
+				<a href="https://www.esade.edu/faculty-research/en/institute-innovation-knowledge-management/outreach/cloud-services-for-synchronisation-and-sharing" class="card-footer-item">Website</a>
+				<a href="https://indico.cern.ch/event/1210538/program" class="card-footer-item">Programme</a>
+			</footer>
+		</div>
+	</div>
 	<div class="column is-one-fourth">
 		<div class="card">
 			<div class="card-image">
@@ -110,7 +142,7 @@
 					Conference Organized by <br/> DEIC
 					</p>
 					<hr/>
-					<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>
+					<!--<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>-->
 				</div>
 			</div>
 			<footer class="card-footer">
@@ -120,7 +152,11 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fourth">
+
+</div>
+
+<div class="columns is-centered">
+	<div class="column is-one-fifth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -145,11 +181,7 @@
 		</div>
 	</div>
 
-</div>
-
-<div class="columns is-centered">
-
-	<div class="column is-one-fourth">
+	<div class="column is-one-fifth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -173,7 +205,7 @@
 			</footer>
 		</div>
 	</div>
-	<div class="column is-one-fourth">
+	<div class="column is-one-fifth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -198,7 +230,7 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fourth">
+	<div class="column is-one-fifth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
@@ -223,7 +255,7 @@
 		</div>
 	</div>
 
-	<div class="column is-one-fourth">
+	<div class="column is-one-fifth">
 		<div class="card">
 			<div class="card-image">
 				<figure class="image is-5by4">
