add comments from Massimo

--- a/themes/cs3/layouts/partials/header.html
+++ b/themes/cs3/layouts/partials/header.html
@@ -17,16 +17,22 @@
 			</div>
 
 			<div class="navbar-end">
-				{{ range .Site.Sections}}
+				<!--{{ range .Site.Sections}}
 				<div class="navbar-item">
 				<a href="{{ .Permalink }}">{{ .Title }}</a>
 				</div>
 				{{ end }}
+				-->
+				<!--
 				<div class="navbar-item">
 					<a href="https://gitter.im/cs3org/community"><i class="icon fab fa-gitter"></i></a>
 				</div>
 				<div class="navbar-item">
 					<a href="https://twitter.com/hashtag/cs3rome"><i class="icon fab fa-twitter"></i></a>
+				</div>
+				-->
+				<div class="navbar-item">
+					<a href="mailto:cs3-conf2024-iac@cern.ch?subject=Please add me to conference mailing list">Subscribe me to conference news!</a>
 				</div>
 				<div class="navbar-item">
 					<a href="https://github.com/cs3community"><i class="icon fab fa-github"></i></a>
