--- a/themes/cs3/layouts/index.html
+++ b/themes/cs3/layouts/index.html
@@ -29,13 +29,13 @@
 					<b>Geneva, CH</b>
 					<!--<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>-->
 					<p>
-					Conference Organized by <br/> CERN
+					Organized by  CERN
 					</p>
 				</div>
 			</div>
 			<footer class="card-footer">
-				<a href="https://sciencegateway.cern/" class="card-footer-item">Registration coming soon</a>
-				<a href="https://sciencegateway.cern/" class="card-footer-item">Website coming soon</a>
+				<a href="https://indico.cern.ch/event/1332413/" class="card-footer-item">Register</a>
+				<a href="https://indico.cern.ch/event/1332413/" class="card-footer-item">Website</a>
 			</footer>
 		</div>
 	</div>
@@ -61,7 +61,7 @@
 					<h1>2023</h1>
 					<b>Barcelona</b>
 					<p>
-					Conference Organized by <br/> ESADE
+					Organized by  ESADE
 					</p>
 					<hr/>
 					<!--
@@ -87,7 +87,7 @@
 					<h1>2022</h1>
 					<b>Virtual</b>
 					<p>
-					Conference Organized by <br/> CERN
+					Organized by  CERN
 					</p>
 					<hr/>
 					<!--
@@ -113,7 +113,7 @@
 					<h1>2021</h1>
 					<b>Virtual</b>
 					<p>
-					Conference Organized by <br/> CERN
+					Organized by  CERN
 					</p>
 					<hr/>
 					<!--
@@ -139,7 +139,7 @@
 					<h1>2020</h1>
 					<b>Copenhagen, DK</b>
 					<p>
-					Conference Organized by <br/> DEIC
+					Organized by  DEIC
 					</p>
 					<hr/>
 					<!--<a href="https://doi.org/10.5281/zenodo.3601216"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3601216.svg" alt="DOI"></a>-->
@@ -168,7 +168,7 @@
 					<h1>2019</h1>
 					<b>Rome, IT</b>
 					<p>
-					Conference Organized by <br/> INFN
+					Organized by  INFN
 					</p>
 					<hr/>
 					<a href="https://doi.org/10.5281/zenodo.2545482"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2545482.svg" alt="DOI"></a>
@@ -193,7 +193,7 @@
 					<h1>2018</h1>
 					<b>Krakow, PL</b>
 					<p>
-					Conference Organized by <br/> Cyfronet
+					Organized by  Cyfronet
 					</p>
 					<hr/>
 					<a href="https://doi.org/10.5281/zenodo.1157141"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.1157141.svg" alt="DOI"></a>
@@ -217,7 +217,7 @@
 					<h1>2017</h1>
 					<b>Amsterdam, NL</b>
 					<p>
-					Conference Organized by <br/> SURFSara
+					Organized by  SURFSara
 					</p>
 					<hr/>
 					<a href="https://doi.org/10.5281/zenodo.254064"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.254064.svg" alt="DOI"></a>
@@ -242,7 +242,7 @@
 					<h1>2016</h1>
 					<b>Zurich, CH</b>
 					<p>
-					Conference Organized by <br/> ETH Zurich
+					Organized by  ETH Zurich
 					</p>
 					<hr/>
 					<a href="https://doi.org/10.5281/zenodo.44783"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.44783.svg" alt="DOI"></a>
@@ -267,7 +267,7 @@
 					<h1>2014</h1>
 					<b>Geneva, CH</b>
 					<p>
-					Conference Organized by <br/> CERN
+					Organized by  CERN
 					</p>
 					<hr/>
 					<a href="https://doi.org/10.5281/zenodo.2546420"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2546420.svg" alt="DOI"></a>
